WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236901
Origin file may not be created after migrating data to general storage directory
https://bugs.webkit.org/show_bug.cgi?id=236901
Summary
Origin file may not be created after migrating data to general storage directory
Sihui Liu
Reported
2022-02-19 20:24:26 PST
...
Attachments
Patch
(10.09 KB, patch)
2022-02-19 21:05 PST
,
Sihui Liu
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(11.04 KB, patch)
2022-02-19 21:24 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.05 KB, patch)
2022-02-20 13:12 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.01 KB, patch)
2022-02-20 13:12 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2022-02-19 21:05:57 PST
Created
attachment 452673
[details]
Patch
Sihui Liu
Comment 2
2022-02-19 21:24:14 PST
Created
attachment 452676
[details]
Patch
Chris Dumez
Comment 3
2022-02-19 23:31:23 PST
Comment on
attachment 452676
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=452676&action=review
R=me
> Source/WebKit/ChangeLog:18 > + old behavior that synchronouly writes origin file at creation of OriginStorageManager. To sovle the delay issue,
Typo: solve
> Source/WebKit/ChangeLog:19 > + in the sync message handler (NetworkStorageManager::connectToStorageArea), we specifically asks to not write
Typo: ask
> Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:726 > + // Avoid delay in replying sync message by delay writing origin to file.
By delaying
Sihui Liu
Comment 4
2022-02-20 13:12:24 PST
Created
attachment 452698
[details]
Patch for landing
Sihui Liu
Comment 5
2022-02-20 13:12:51 PST
Created
attachment 452699
[details]
Patch for landing
EWS
Comment 6
2022-02-20 15:11:08 PST
Committed
r290233
(
247558@main
): <
https://commits.webkit.org/247558@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452699
[details]
.
Radar WebKit Bug Importer
Comment 7
2022-02-20 15:12:19 PST
<
rdar://problem/89209181
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug